--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,14 @@
 [build-system]
-requires = ["scikit-build-core", "networkx", "tqdm", "fypp", "cmake>=3.18", "numpy<=2.1.1"]
+requires = ["scikit-build-core", "numpy", "networkx", "matplotlib", "pick", "tqdm"]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "mobbrmsd"
-version = "0.0.21"
+dependencies = ["numpy"]
+version = "0.0.22"
+readme = "README.md"
+license = {file = "LICENSE.txt"}
+
+[tool.scikit-build]
+ninja.version = ">=1.10"
+cmake.version = ">=3.18"
