--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -32,7 +32,8 @@ jobs:
           git checkout -b ${{ env.RELEASE_BRANCH_NAME }}
 
       - name: Update pyproject.toml
-        run: sed -i "/^version =/c version = ${{ env.VERSION_STRING }}" pyproject.toml
+        shell: bash
+        run: sed -i '/^version =/c version = "${{ env.VERSION_STRING }}"' pyproject.toml
 
       - name: Commit pyproject.toml
         uses: EndBug/add-and-commit@v7.1.0
