--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -23,25 +23,25 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5 # Python環境のセットアップ
       with:
-        python-version: "3.x"
+        python-version: "3.10"
 
     - name: Setup Fortran
       uses: fortran-lang/setup-fortran@v1
       id: setup-fortran
       with:
         compiler: gcc
-        version: 12      
-      
+        version: 12
+
     - name: Install pypa/build # ビルドツールをインストール
       run: >-
-        python3 -m
+        python -m
         pip install
         build
         --user
-        
+
     - name: Build a binary wheel and a source tarball
-      run: python3 -m build # パッケージをビルド
-      
+      run: python -m build # パッケージをビルド
+
     - name: Store the distribution packages # ビルド成果物をpython-package-distributionsという名前でdistディレクトリに一時的に保存
       uses: actions/upload-artifact@v4
       with:
