--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5 # Python環境のセットアップ
       with:
-        python-version: "3.10"
+        python-version: "3.*"
 
     - name: Setup Fortran
       uses: fortran-lang/setup-fortran@v1
@@ -37,10 +37,11 @@ jobs:
         python -m
         pip install
         build
+        meson
         --user
 
-    - name: Build a binary wheel and a source tarball
-      run: python -m build # パッケージをビルド
+    - name: Build a binary wheel and a source tarball # パッケージをビルド
+      run: python -m build
 
     - name: Store the distribution packages # ビルド成果物をpython-package-distributionsという名前でdistディレクトリに一時的に保存
       uses: actions/upload-artifact@v4
@@ -81,18 +82,18 @@ jobs:
           message: "[update] pyproject.toml, version"
           add: pyproject.toml
 
-#      - name: Create a tag
-#        id: tag_version
-#        uses: mathieudutour/github-tag-action@v6.1
-#        with:
-#          custom_tag: ${{ env.VERSION_STRING }}
-#          tag_prefix: v
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
+       - name: Create a tag
+         id: tag_version
+         uses: mathieudutour/github-tag-action@v6.1
+         with:
+           custom_tag: ${{ env.VERSION_STRING }}
+           tag_prefix: v
+           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-#      - name: Create a GitHub release
-#        uses: ncipollo/release-action@v1
-#        with:
-#          tag: ${{ steps.tag_version.outputs.new_tag }}
-#          name: ${{ steps.tag_version.outputs.new_tag }}
-#          body: ${{ github.event.pull_request.body }}
+       - name: Create a GitHub release
+         uses: ncipollo/release-action@v1
+         with:
+           tag: ${{ steps.tag_version.outputs.new_tag }}
+           name: ${{ steps.tag_version.outputs.new_tag }}
+           body: ${{ github.event.pull_request.body }}
 
