--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -58,42 +58,38 @@ jobs:
       VERSION_STRING: ${{ github.event.inputs.version }}
       RELEASE_BRANCH_NAME: release/${{ github.event.inputs.version }}
 
-
     steps:
-      - name: Checkout branch
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
+    - name: Checkout branch
+      uses: actions/checkout@v4 # コードを取得
 
-      # releaseブランチを作成
-      - name: Create and push release branch
-        run:
-          git checkout -b ${{ env.RELEASE_BRANCH_NAME }}
+    - name: Create and push release branch # releaseブランチを作成
+      run:
+        git checkout -b ${{ env.RELEASE_BRANCH_NAME }}
 
-      - name: Update pyproject.toml
-        shell: bash
-        run: sed -i '/^version =/c version = "${{ env.VERSION_STRING }}"' pyproject.toml
+    - name: Update pyproject.toml
+      shell: bash
+      run: sed -i '/^version =/c version = "${{ env.VERSION_STRING }}"' pyproject.toml
 
-      - name: Commit pyproject.toml
-        uses: EndBug/add-and-commit@v7.1.0
-        with:
-          author_name: "yymmt742"
-          author_email: "yymmt@kuchem.kyoto-u.ac.jp"
-          message: "[update] pyproject.toml, version"
-          add: pyproject.toml
+    - name: Commit pyproject.toml
+      uses: EndBug/add-and-commit@v7.1.0
+      with:
+        author_name: "yymmt742"
+        author_email: "yymmt@kuchem.kyoto-u.ac.jp"
+        message: "[update] pyproject.toml, version"
+        add: pyproject.toml
 
-       - name: Create a tag
-         id: tag_version
-         uses: mathieudutour/github-tag-action@v6.1
-         with:
-           custom_tag: ${{ env.VERSION_STRING }}
-           tag_prefix: v
-           github_token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create a tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v6.1
+      with:
+        custom_tag: ${{ env.VERSION_STRING }}
+        tag_prefix: v
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
-       - name: Create a GitHub release
-         uses: ncipollo/release-action@v1
-         with:
-           tag: ${{ steps.tag_version.outputs.new_tag }}
-           name: ${{ steps.tag_version.outputs.new_tag }}
-           body: ${{ github.event.pull_request.body }}
+    - name: Create a GitHub release
+      uses: ncipollo/release-action@v1
+      with:
+        tag: ${{ steps.tag_version.outputs.new_tag }}
+        name: ${{ steps.tag_version.outputs.new_tag }}
+        body: ${{ github.event.pull_request.body }}
 
