--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -26,10 +26,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4 # コードを取得
 
-    - name: Create and push release branch # releaseブランチを作成
-      run:
-        git checkout -b ${{ env.RELEASE_BRANCH_NAME }}
-
     - name: Set up Python
       uses: actions/setup-python@v5 # Python環境のセットアップ
       with:
@@ -41,8 +37,20 @@ jobs:
       with:
         compiler: gcc
         version: 12
+        
+    - name: Update pyproject.toml
+      shell: bash
+      run: sed -i '/^version =/c version = ""' pyproject.toml
 
-    - name: Install pypa/build # ビルドツールをインストール
+    - name: Commit pyproject.toml
+      uses: EndBug/add-and-commit@v7.1.0
+      with:
+        author_name: "yymmt742"
+        author_email: "yymmt@kuchem.kyoto-u.ac.jp"
+        message: "[update] pyproject.toml, version ${{ env.VERSION_STRING }}"
+        add: pyproject.toml
+
+    - name: Install build tools # ビルドツールをインストール
       run: >-
         python -m
         pip install
@@ -58,19 +66,7 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
-
-    - name: Update pyproject.toml
-      shell: bash
-      run: sed -i '/^version =/c version = "${{ env.VERSION_STRING }}"' pyproject.toml
-
-    - name: Commit pyproject.toml
-      uses: EndBug/add-and-commit@v7.1.0
-      with:
-        author_name: "yymmt742"
-        author_email: "yymmt@kuchem.kyoto-u.ac.jp"
-        message: "[update] pyproject.toml, version"
-        add: pyproject.toml
-
+        
     - name: Create a tag
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.1
@@ -97,7 +93,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       run: >-
         gh release create
-        '${{ github.ref_name }}'
+        'v${{ env.VERSION_STRING }}'
         --repo '${{ github.repository }}'
         --notes ""
 
@@ -106,6 +102,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       run: >-
         gh release upload
-        '${{ github.ref_name }}' dist/**
+        'v${{ env.VERSION_STRING }}' dist/**
         --repo '${{ github.repository }}'
 
