--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -25,6 +25,32 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4 # コードを取得
+      with:
+        fetch-depth: 2
+
+    - name: Create and push release branch # releaseブランチを作成
+      run:
+        git checkout -b ${{ env.RELEASE_BRANCH_NAME }}
+
+    - name: Update pyproject.toml
+      shell: bash
+      run: sed -i '/^version =/c version = ""' pyproject.toml
+
+    - name: Commit pyproject.toml
+      uses: EndBug/add-and-commit@v7.1.0
+      with:
+        author_name: "yymmt742"
+        author_email: "yymmt@kuchem.kyoto-u.ac.jp"
+        message: "[update] pyproject.toml, version ${{ env.VERSION_STRING }}"
+        add: pyproject.toml
+
+    - name: Create a tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v6.1
+      with:
+        custom_tag: ${{ env.VERSION_STRING }}
+        tag_prefix: v
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v5 # Python環境のセットアップ
@@ -37,22 +63,6 @@ jobs:
       with:
         compiler: gcc
         version: 12
-
-    - name: Create and push release branch # releaseブランチを作成
-      run:
-        git checkout -b ${{ env.RELEASE_BRANCH_NAME }}
-        
-    - name: Update pyproject.toml
-      shell: bash
-      run: sed -i '/^version =/c version = ""' pyproject.toml
-
-    - name: Commit pyproject.toml
-      uses: EndBug/add-and-commit@v7.1.0
-      with:
-        author_name: "yymmt742"
-        author_email: "yymmt@kuchem.kyoto-u.ac.jp"
-        message: "[update] pyproject.toml, version ${{ env.VERSION_STRING }}"
-        add: pyproject.toml
 
     - name: Install build tools # ビルドツールをインストール
       run: >-
@@ -70,14 +80,6 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
-        
-    - name: Create a tag
-      id: tag_version
-      uses: mathieudutour/github-tag-action@v6.1
-      with:
-        custom_tag: ${{ env.VERSION_STRING }}
-        tag_prefix: v
-        github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Download all the dists
       uses: actions/download-artifact@v4
