[update] create_release.yml

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Update pyproject.toml
       shell: bash
-      run: sed -i '/^version =/c version = ""' pyproject.toml
+      run: sed -i '/^version =/c version = "${{ env.VERSION_STRING }}"' pyproject.toml
 
     - name: Commit pyproject.toml
       uses: EndBug/add-and-commit@v7.1.0
