[add] requirements.txt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build-core", "meson", "numpy", "networkx", "matplotlib", "pick", "tqdm"]
+requires = ["scikit-build-core", "meson", "numpy"]
 build-backend = "scikit_build_core.build"
 
 [project]
