--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "mobbrmsd"
-dependencies = ["numpy"]
+dependencies = ["numpy", "matplotlib", "networkx", "tqdm", "pick"]
 version = "0.0.23"
 description = "Molecular-Oriented RMSD with Branch-and-Bound"
 readme = "README.md"
