[update] CMakeLists.txt, enable MKL

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
-find_package(OpenMP REQUIRED)
+set(BLA_STATIC ON)
+find_package(OpenMP REQUIRED QUIET)
 find_package(BLAS REQUIRED)
+
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
   find_package(unittest QUIET)
   if(NOT unittest_FOUND)
@@ -83,7 +85,7 @@ function(ADDOPTS name dim real int blas openmp)
     target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS})
     target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES})
   endif()
-  if(openmp)
+  if(OpenMP_FOUND AND openmp)
     target_compile_options(${name} PRIVATE ${OpenMP_Fortran_FLAGS})
     target_link_libraries(${name} PRIVATE ${OpenMP_Fortran_LIB_NAMES})
   endif()
