--- a/src/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_subdirectory(mobbrmsd_2d)
-add_subdirectory(mobbrmsd_3d)
-add_subdirectory(mobbrmsd_xd)
+foreach(dims IN ITEMS ${mobbrmsd_DIMENTIONS})
+ add_subdirectory(mobbrmsd_${dims})
+endforeach()
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_subdirectory(test)
 endif()
