--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,19 @@ endif()
 cmake_policy( SET CMP0076 NEW )
 set( CMAKE_POSITION_INDEPENDENT_CODE ON )
 
-find_package(OpenMP REQUIRED QUIET)
+find_package(OpenMP QUIET)
+
 set(BLA_STATIC ON)
-find_package(BLAS REQUIRED)
+foreach(var OpenBLAS)
+  set(BLA_VENDOR ${var})
+  message(STATUS "Check BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
+  find_package(BLAS QUIET)
+  find_package(LAPACK QUIET)
+  if( BLAS_FOUND AND LAPACK_FOUND )
+    message(STATUS "Found BLAS and LAPACK with BLA_VENDOR=${BLA_VENDOR}")
+    break()
+  endif( BLAS_FOUND AND LAPACK_FOUND )
+endforeach()
 
 set( mobbrmsd_PRECISIONS sp dp )
 set( mobbrmsd_DIMENTIONS 2d 3d )
