--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,8 +59,8 @@ function(ADDOPTS name dims real int blas openmp)
   target_compile_definitions(${name} PRIVATE -DUSE_INT${int})
   target_include_directories(${name} PRIVATE ${mobbrmsd_INCLUDE_DIR})
   if(blas)
-    target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS})
-    target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES})
+    target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS} ${LAPACK_LINKER_FLAGS})
+    target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
   endif()
   if(OpenMP_FOUND AND openmp)
     target_compile_options(${name} PRIVATE ${OpenMP_Fortran_FLAGS})
